--- a/src/scripts/components/map/map.scss
+++ b/src/scripts/components/map/map.scss
@@ -1,7 +1,7 @@
 .h5p-game-map-map {
   background-color: #fff;
   box-sizing: border-box;
-  display: block;
+  display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
   position: relative;
